Updated to jdk8u172-b11, small fixes to work on Java 9/10